add views data to index.html

--- a/django_meeting/meeting/templates/meeting/index.html
+++ b/django_meeting/meeting/templates/meeting/index.html
@@ -6,7 +6,17 @@
     <title>All Meetups</title>
 </head>
 <body>
-    <h1>All meetups</h1>
-    <p>hello world</p>
+    <h1>All Meetups</h1>
+
+    {% for meetup_items in meetup %}
+       <p>{{meetup_items.title}}</p> 
+    {% endfor %}
+
+    {% if show_meetup %}
+        <p>{{meetup.0.title}}</p>
+    {% else %}
+        <p>show meetup is false</p>
+    {% endif %}
+
 </body>
 </html>
