--- a/django_meeting/meeting/templates/meeting/index.html
+++ b/django_meeting/meeting/templates/meeting/index.html
@@ -1,24 +1,46 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Meetups</title>
-    <link rel="stylesheet" href="{% static 'meeting/styles/base.css' %}">
-</head>
-<body>
-    <h1>All Meetups</h1>
+    <link rel="stylesheet" href="{% static 'meeting/styles/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'meeting/styles/all-meetups.css' %}" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/meetup">DjangoMeetups</a>
+      </nav>
+      <h1>We got great meetups coming up!</h1>
+      <p>Find the one that best suits your needs!</p>
+    </header>
 
-    {% for meetup_items in meetup %}
-       <p>{{meetup_items.title}}</p> 
-    {% endfor %}
-
-    {% if show_meetup %}
-        <p>{{meetup.0.title}}</p>
-    {% else %}
-        <p>show meetup is false</p>
-    {% endif %}
-
-</body>
+    <main>
+      <section>
+        <h2>Upcoming Meetups!</h2>
+        <ol>
+          {% for meetup_items in meetup %}
+            <li class="meetup-item">
+              <article>
+                <div class="meetup-summary">
+                  <div class="meetup-image">
+                    <img src="" alt="" />
+                  </div>
+                  <div class="meetup-details">
+                    <h3>{{ meetup_items.title }}</h3>
+                    <address>{{ meetup_items.location }}</address>
+                  </div>
+                </div>
+                <div class="meetup-actions">
+                  <a href="" class="btn">More Details</a>
+                </div>
+              </article>
+            </li>
+          {% endfor %}
+        </ol>
+      </section>
+    </main>
+  </body>
 </html>
