add slug in urls

--- a/django_meeting/meeting/templates/meeting/detail.html
+++ b/django_meeting/meeting/templates/meeting/detail.html
@@ -14,7 +14,7 @@
             <img src="" alt="">
 
             <section id="location">
-                <h2></h2>
+                <h2>{{title}}</h2>
                 <address>This meetup takes place in </address>
             </section>
 
@@ -24,6 +24,11 @@
                 <footer>
                     <p>Need more details? Please <a href="">contact the organiser</a> ( but don't spam us ) </p>
                 </footer>
+            </section>
+
+            <section id="registration">
+                <h2>Join us</h2>
+
             </section>
 
         </article>
