--- a/django_meeting/meeting/templates/meeting/index.html
+++ b/django_meeting/meeting/templates/meeting/index.html
@@ -34,7 +34,7 @@
                   </div>
                 </div>
                 <div class="meetup-actions">
-                  <a href="" class="btn">More Details</a>
+                  <a href="{% url "meetup-detail" meetup_items.slug %}" class="btn">More Details</a>
                 </div>
               </article>
             </li>
