--- a/django_meeting/meeting/templates/meeting/detail.html
+++ b/django_meeting/meeting/templates/meeting/detail.html
@@ -1,37 +1,37 @@
+{% extends 'meeting/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting Detail</title>
-    <link rel="stylesheet" href="{% static 'meeting/styles/base.css' %}">
-    <link rel="stylesheet" href="{% static 'meeting/styles/meetup-detail.css' %}">
-</head>
-<body>
-    <main>
-        <article>
-            <img src="" alt="">
 
-            <section id="location">
-                <h2>{{title}}</h2>
-                <address>This meetup takes place in </address>
-            </section>
+{% block title %}
+Meetup Detail
+{% endblock title %}
 
-            <section id="details">
-                <h2>What's this meetup about?</h2>
-                <p>{{description}}</p>
-                <footer>
-                    <p>Need more details? Please <a href="">contact the organiser</a> ( but don't spam us ) </p>
-                </footer>
-            </section>
+{% block css_style %}
+<link rel="stylesheet" href="{% static 'meeting/styles/meetup-detail.css' %}">
+{% endblock css_style %}
 
-            <section id="registration">
-                <h2>Join us</h2>
+{% block body %}
+<main>
+    <article>
+        <img src="" alt="">
 
-            </section>
+        <section id="location">
+            <h2>{{title}}</h2>
+            <address>This meetup takes place in </address>
+        </section>
 
-        </article>
-    </main>
-</body>
-</html>
+        <section id="details">
+            <h2>What's this meetup about?</h2>
+            <p>{{description}}</p>
+            <footer>
+                <p>Need more details? Please <a href="">contact the organiser</a> ( but don't spam us ) </p>
+            </footer>
+        </section>
+
+        <section id="registration">
+            <h2>Join us</h2>
+
+        </section>
+
+    </article>
+</main>
+{% endblock body %}
